Added systems-of-systems test.

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,7 +1,10 @@
 [deps]
+Dimensions = "5f902022-033a-44bd-a904-0a49265d4d22"
+HDF5Vectors = "7098961b-d60d-42aa-8832-e11a9f96377b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SystemsOfSystems = "444f41de-88f0-45df-a3dd-0849e84f1dfe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-HDF5Vectors = "7098961b-d60d-42aa-8832-e11a9f96377b"
 
 [sources]
+Dimensions = {url = "https://github.com/Gradient-Aerospace/Dimensions.jl"}
 HDF5Vectors = {url = "https://github.com/Gradient-Aerospace/HDF5Vectors.jl"}
